--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: blue;
+    background-image: linear-gradient(to right, blue , white);
     text-align: center;
     font-size: 30px;
 }
